[project]
name = "atcoder"
version = "0.1.0"
description = "Represents a repository of accepted results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ac-library-python>=0.1.0",
    "autopep8>=2.3.2",
    "bitarray==2.6.2",
    "black>=25.1.0",
    "cppyy==2.4.1",
    "flake8>=7.3.0",
    "gmpy2==2.1.5",
    "lightgbm>=4.6.0",
    "more-itertools==9.0.0",
    "mpmath==1.3.0",
    "mypy>=1.17.0",
    "networkx==3.0",
    "numba==0.57.0",
    "numpy==1.24.1",
    "online-judge-tools>=11.5.1",
    "ortools==9.5.2237",
    "pandas==1.5.2",
    "pip>=25.1.1",
    "polars==0.15.15",
    "pulp==2.7.0",
    "pytest>=8.4.1",
    "scikit-learn==1.2.0",
    "scipy==1.10.1",
    "setuptools==70.0.0",
    "shapely==2.0.0",
    "sortedcontainers==2.4.0",
    "sympy==1.11.1",
    "torch>=2.4.1",
    "z3-solver==4.12.1.0",
]
