[project]
name = "atcoder"
version = "0.2.0"
description = "Represents a repository of accepted results."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "absl-py==2.3.1",
    "ac-library-python>=0.1.0",
    "acl-cpp-python==0.6.2",
    "autopep8>=2.3.2",
    "bitarray==3.6.1",
    "black>=25.1.0",
    "cppyy==3.5.0",
    "cppyy-backend==1.15.3",
    "cppyy-cling==6.32.8",
    "CPyCppyy==1.13.0",
    "Cython==3.1.3",
    "filelock==3.20.3",
    "flake8>=7.3.0",
    "fsspec==2025.7.0",
    "gmpy2==2.2.1",
    "immutabledict==4.2.1",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "lightgbm==4.6.0",
    "llvmlite==0.44.0",
    "MarkupSafe==3.0.2",
    "more-itertools==10.7.0",
    "mpmath==1.3.0",
    "mypy>=1.17.0",
    "networkx==3.5",
    "numba==0.61.2",
    "numpy==2.2.6",
    "online-judge-tools>=11.5.1",
    "ortools==9.14.6206",
    "pandas==2.3.2",
    "pip>=25.1.1",
    "polars==1.31.0",
    "protobuf==6.31.1",
    "pulp==3.2.2",
    "pyrsistent==0.20.0",
    "pytest>=8.4.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "rustworkx==0.16.0",
    "scikit-learn==1.7.1",
    "scipy==1.16.1",
    "setuptools==78.1.1",
    "shapely==2.1.1",
    "six==1.17.0",
    "sortedcontainers==2.4.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.8.0",
    "typing_extensions==4.14.1",
    "tzdata==2025.2",
    "z3-solver==4.15.3.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
